--- a/landingPage.html
+++ b/landingPage.html
@@ -7,6 +7,7 @@
     <title>Bootstrap demo</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+        <script src="./js/hook/guardian.js"></script>
 </head>
 
 <body>
@@ -19,6 +20,9 @@
         </li>
         <li class="nav-item">
             <a class="nav-link" href="#">Link</a>
+        </li>
+        <li class="nav-item">
+            <button class="btn btn-danger" id="logOut">Log out</button>
         </li>
     </ul>
 
