--- a/landingPage.html
+++ b/landingPage.html
@@ -201,6 +201,7 @@
             <p>&copy;Ejercicios de RIWI</p>
         </div>
     </div>
+    <script src="./js/logOut.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
         crossorigin="anonymous"></script>
