--- a/gallery.html
+++ b/gallery.html
@@ -10,6 +10,7 @@
       integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH"
       crossorigin="anonymous"
     />
+    <script src="./js/hook/guardian.js"></script>
   </head>
   <header>
     <nav class="navbar navbar-expand-lg bg-body-tertiary">
