--- a/index.html
+++ b/index.html
@@ -32,5 +32,6 @@
       <div class="mb-3 form-check"></div>
       <button type="submit" class="btn btn-primary">Submit</button>
     </form>
+    <script src="./js/app.js"></script>
   </body>
 </html>
