--- a/landingPage.html
+++ b/landingPage.html
@@ -16,7 +16,7 @@
             <a class="nav-link active" aria-current="page" href="#">Home</a>
         </li>
         <li class="nav-item">
-            <a class="nav-link" href="#">Galery</a>
+            <a class="nav-link" href="./gallery.html">Gallery</a>
         </li>
         <li class="nav-item">
             <a class="nav-link" href="#">Log in</a>
