se arregla navbar para vincular paginas

--- a/gallery.html
+++ b/gallery.html
@@ -17,18 +17,19 @@
   <body>
     <ul class="nav justify-content-end m-3">
       <li class="nav-item">
-          <a class="nav-link active" aria-current="page" href="#">Active</a>
+          <a class="nav-link active" aria-current="page" href="./landingPage.html">Home</a>
       </li>
       <li class="nav-item">
-          <a class="nav-link" href="#">Link</a>
+          <a class="nav-link" href="./gallery.html">Gallery</a>
       </li>
       <li class="nav-item">
-          <a class="nav-link" href="#">Link</a>
+          <a class="nav-link" href="#">Log in</a>
       </li>
       <li class="nav-item">
           <button class="btn btn-danger" id="logOut">Log out</button>
       </li>
   </ul>
+
     <!-- carousel -->
     <div id="carouselExampleIndicators" class="carousel slide">
       <div class="carousel-indicators">
